components/cryostat/gateway/gateway-cryostat.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cryostat
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - cryostat-istio-ingress.apps.cluster-nbhrp.dynamic.redhatworkshops.io
      port:
        name: https
        number: 8443
        protocol: HTTPS
      tls:
        credentialName: cryostat-cert
        mode: SIMPLE
